--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "webcam-emotions",
+  "homepage": "https://jonathankarlinski.github.io/webcam-emotions/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -31,6 +32,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.1.0",
     "vite": "^4.4.5"
   }
 }
